<resources>
    <string name="app_name">دمو کتابخانه</string>
    <string name="app_version">نسخه ۱.۰.۰</string>

    <string name="action_aboutus">درباره سازنده</string>
    <string name="action_search">جستجو</string>
    <string name="action_favorites">علاقه مندی ها</string>

    <string name="dialog_sarshenase">سرشناسه: </string>
    <string name="dialog_publisher">ناشر: </string>
    <string name="dialog_motarjem">مترجم: </string>
    <string name="dialog_saleenteshar">سال انتشار: </string>

    <string name="save_tofaved">اضافه به علاقه مندی ها</string>
    <string name="removed_fromfaved">حذف از علاقه مندی ها</string>
    <string name="okay">باشه</string>
    <string name="book_faved">کتاب مورد نظر شما به علاقه مندی ها اضافه شد</string>
    <string name="book_removed_faved">کتاب مورد نظر شما از علاقه مندی ها حذف شد</string>
    <string name="about_dialog">
        نرم افزار متن باز دمو برای یک کتاب خانه
        \n
        اطلاعات این نرم افزار صرفا به طور آزمایش از فایل اکسل یک کتابخانه که برای عموم روی وب سایتش بود تهیه شده است
        \n
        برای دسترسی به سورس کد به آدرس زیر بروید:
        \n
        http://github.com/aliab/libraryapp
    </string>

</resources>
