<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_aboutus"
        android:orderInCategory="101"
        android:title="@string/action_aboutus"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_showfaved"
        android:icon="@drawable/ic_favorite_border_white_48dp"
        android:orderInCategory="100"
        android:title="@string/action_favorites"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_48dp"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

</menu>
